manifests/backend/minio/state/20-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: minio-svc
spec:
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: "minio-svc-port"
      protocol: TCP
  selector:
    app: minio
